# tesseract.plugin

./: .gitignore  Readme.md  appveyor.yml  build.py  conan.cmake  conanfile.py
plugin/: CMakeLists.txt  plugin.cc  plugin.cpp
plugin/test/: CMakeLists.txt  test.cc
test_package/: conanfile.py
